@@ -12,7 +12,7 @@ import java.util.List;
  *
  * @author Derek Garcia
  */
-class PageBuffer {
+public class PageBuffer {
     private final List<Page> buffer = new ArrayList<>();
     private final int capacity;
     private final int pageSize;
@@ -39,10 +39,10 @@ class PageBuffer {
      * @param pageNumber Page number
      * @return Page if in buffer, null otherwise
      */
-    private Page searchBuffer(int tableID, int pageNumber) {
+    private Page searchBuffer(int tableID, int pageNumber, boolean findIndexFile) {
         for (Page p : this.buffer) {
             // Find page
-            if (p.match(tableID, pageNumber))
+            if (p.match(tableID, pageNumber, findIndexFile))
                 return p;
         }
         return null;
@@ -55,15 +55,21 @@ class PageBuffer {
      * @param page Page to write to disk
      * @throws IOException Failed to open table file
      */
-    private void writeToDisk(Page page) throws IOException {
-        TableFile writeFile = page.getWriteFile();
+    private void writeToDisk(Page page, boolean isIndexPage) throws IOException {
+        DBFile writeFile = page.getWriteFile();
         try (RandomAccessFile raf = writeFile.toRandomAccessFile()) {
             // Write page data
-            raf.seek(1 + (long) page.getPageNumber() * this.pageSize);  // +1 is page count byte
+            if (!isIndexPage)
+                raf.seek(Integer.BYTES + (long) page.getPageNumber() * this.pageSize);  // 4 bytes reserved for num pages
+            else
+                raf.seek((Integer.BYTES * 2) + (long) page.getPageNumber() * this.pageSize);  // 4 bytes reserved for num pages, 4 bytes for root node number
             raf.write(page.getData());
             // Update page count
             raf.seek(0);
-            raf.write((int) ((raf.length() - 1) / this.pageSize));
+            if (!isIndexPage)
+                raf.writeInt((int) ((raf.length() - Integer.BYTES) / this.pageSize));
+            else
+                raf.writeInt((int) ((raf.length() - (Integer.BYTES * 2)) / this.pageSize));
         }
     }
 
@@ -74,17 +80,25 @@ class PageBuffer {
      * @param tableID    Table ID to read from
      * @param pageNumber Page number to get
      */
-    private void readFromDisk(int tableID, int pageNumber) throws IOException {
-        TableFile writeFile = new TableFile(this.databaseRoot, tableID);
+    private void readFromDisk(int tableID, int pageNumber, IndexFile indexFile) throws IOException {
+        DBFile writeFile;
+        if (indexFile == null)
+            writeFile = new TableFile(this.databaseRoot, tableID);
+        else
+            writeFile = indexFile;
+
         byte[] buffer = new byte[this.pageSize];
 
         // Read page from file
         try (RandomAccessFile raf = writeFile.toRandomAccessFile()) {
-            raf.seek(1 + (long) pageNumber * this.pageSize);  // +1 is page count byte
+            if (indexFile == null)
+                raf.seek((Integer.BYTES) + (long) pageNumber * this.pageSize);  // 4 bytes reserved for num pages
+            else
+                raf.seek((Integer.BYTES * 2) + (long) pageNumber * this.pageSize);  // 4 bytes reserved for num pages, 4 bytes for root node number
             raf.read(buffer, 0, this.pageSize);
         }
 
-        writeToBuffer(new Page(writeFile, this.pageSize, pageNumber, buffer));
+        writeToBuffer(new Page(writeFile, this.pageSize, pageNumber, buffer, indexFile != null));
     }
 
     /**
@@ -95,11 +109,13 @@ class PageBuffer {
     public void writeToBuffer(Page page) throws IOException {
 
         // Make room if needed
-        if (this.buffer.size() == this.capacity)
-            writeToDisk(this.buffer.remove(this.capacity - 1));
+        if (this.buffer.size() == this.capacity) {
+            Page toRemove = this.buffer.remove(this.capacity - 1);
+            writeToDisk(toRemove, toRemove.IsIndexPage);
+        }
 
         // Push list
-        this.buffer.add(0, page);
+        this.buffer.addFirst(page);
     }
 
 
@@ -111,21 +127,21 @@ class PageBuffer {
      * @param removeFromBuffer Remove this page from the buffer ( used for splitting pages )
      * @return Page
      */
-    public Page readFromBuffer(int tableID, int pageNumber, boolean removeFromBuffer) throws IOException {
+    public Page readFromBuffer(int tableID, int pageNumber, boolean removeFromBuffer, IndexFile indexFile) throws IOException {
 
-        Page page = searchBuffer(tableID, pageNumber);
+        Page page = searchBuffer(tableID, pageNumber, indexFile != null);
 
         // Read page from disk if not in buffer
         // set to first to reduce search time
         if (page == null) {
-            readFromDisk(tableID, pageNumber);
-            page = searchBuffer(tableID, pageNumber);
+            readFromDisk(tableID, pageNumber, indexFile);
+            page = searchBuffer(tableID, pageNumber, indexFile != null);
         }
 
         // Push to top of buffer
         this.buffer.remove(page);
         if (!removeFromBuffer)
-            this.buffer.add(0, page);
+            this.buffer.addFirst(page);
 
         return page;
     }
@@ -140,17 +156,19 @@ class PageBuffer {
      * @throws IOException Failed to write to file
      */
     public void fullWrite(TableFile writeFile, int pageNumber, byte[] data) throws IOException {
-        Page page = new Page(writeFile, this.pageSize, pageNumber, data);
+        Page page = new Page(writeFile, this.pageSize, pageNumber, data, false);
         writeToBuffer(page);
-        writeToDisk(page);
+        writeToDisk(page, page.IsIndexPage);
     }
 
     /**
      * Pop and write each entry in the buffer to file
      */
     public void flush() throws IOException {
-        while (!this.buffer.isEmpty())
-            writeToDisk(this.buffer.remove(0));
+        while (!this.buffer.isEmpty()) {
+            Page toRemove = this.buffer.removeFirst();
+            writeToDisk(toRemove, toRemove.IsIndexPage);
+        }
     }
 
 }
